# UNUM_Trading_Bot

./: .env.example  .env.test.example  .gitignore  Dockerfile  README.md  alembic.ini  default.profraw  docker-compose.yml  main.py  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 202603250001_create_ingestion_tables.py
app/: __init__.py  main.py
app/api/: health.py  ready.py  status.py  tradingview.py
app/core/: config.py  feed_status.py  logging.py
app/dashboard/: app.py  config.py  dashboard_app.py  streams.py
app/modules/ingestion/: backfill.py  gateio_rest.py  gateio_ws.py  ws_consumer.py
app/modules/ml_data_prep/: __init__.py  config.py
app/modules/persistence/: __init__.py  base.py  models.py
docs/: DEVELOPER_HANDOFF.md  audit_report 20260419.md  indicators.txt
docs/reference/: api.md  architecture.md  backfill.md  configuration.md  database.md  feed-status.md  gateio-client.md  known-limitations.md  ml-data-prep.md
docs/sprints/sprint-01/: plan.md
docs/sprints/sprint-02/: plan.md  sprint 2 report.md  sprint2_audit.md.resolved
docs/sprints/sprint-03/: analisys for sprint-3 plan.md  dev_checkpoint.md.resolved  plan for sprint-03.md  sprint03_analysis.md.resolved
scripts/: load-ml-data-prep-env.sh
tests/: conftest.py  test_backfill_batch.py  test_config.py  test_dashboard_streams.py  test_gateio_rest_client.py  test_gateio_ws.py  test_health.py  test_persistence_models.py  test_ready.py  test_status.py  test_tradingview_webhook.py  test_ws_consumer.py
