[project]
name = "trade-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "websockets>=12.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke: quick smoke checks",
    "unit: isolated unit/config tests",
    "integration: lightweight integration tests",
    "e2e: heavy end-to-end tests excluded from Sprint 1 CI",
    "load: load/performance tests excluded from Sprint 1 CI",
]
